// Copyright 2019 Yoshi Yamaguchi
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package ymotongpoo;

// ----- tokenizeservice -----

service TokenizeService {
    rpc Tokenize(TokenizeRequest) returns (ModalResponse) {};
}

message TokenizeRequest {
    string source_text = 1;
}

// ----- countservice -----

service CountService {
    rpc CountWords(CountRequest) returns (ModalResponse) {};
}

message CountRequest {
    repeated string words = 1;
}

// ----- modalservice -----

service ModalService {
    rpc FindModalWord(ModalRequest) returns (ModalResponse) {};
}

message ModalRequest {
    repeated WordCount word_counts = 1;
}

message WordCount {
    string word = 1;
    int32 count = 2;
}

message ModalResponse {
    WordCount word_count = 1;
}